api: add endpoints and openAPI to use electrical profiles
