# api/openapi.yaml
@@ -16,6 +16,8 @@ tags:
     description: Pathfinding
   - name: stdcm
     description: Short term DCM
+  - name: electrical_profiles
+    description: Electrical Profiles
 
 paths:
   /health/:
@@ -461,9 +463,13 @@ paths:
               properties:
                 infra:
                   type: number
+                electrical_profile_set:
+                  type: number
                 name:
                   type: string
-        required: true
+              required: 
+                - infra
+                - name
       responses:
         201:
           description: The timetable created
@@ -478,6 +484,9 @@ paths:
                     type: string
                   infra:
                     type: number
+                  electrical_profile_set:
+                    type: number
+                    nullable: true
   /timetable/{id}/:
     get:
       tags:
@@ -504,6 +513,9 @@ paths:
                     type: string
                   infra:
                     type: number
+                  electrical_profile_set:
+                    type: number
+                    nullable: true
                   train_schedule:
                     type: array
                     items:
@@ -553,7 +565,12 @@ paths:
                   type: number
                 name:
                   type: string
-        required: true
+                electrical_profile_set:
+                  type: number
+                  nullable: true
+              required:
+                - infra
+                - name
       responses:
         200:
           description: The timetable updated
@@ -572,7 +589,7 @@ paths:
     post:
       tags:
         - train_schedule
-      summary: Create a batch of train schedule
+      summary: Create a batch of train schedule and run simulations accordingly
       requestBody:
         description: Standalone simulation parameters
         content:
@@ -582,7 +599,7 @@ paths:
         required: true
       responses:
         201:
-          description: The id of the train_schedule created
+          description: The ids of the train_schedules created
           content:
             application/json:
               schema:
@@ -630,7 +647,7 @@ paths:
     patch:
       tags:
         - train_schedule
-      summary: Update a train_schedule
+      summary: Update a train_schedule and run a simulation accordingly
       parameters:
         - in: path
           name: id
@@ -656,7 +673,7 @@ paths:
     get:
       tags:
         - train_schedule
-      summary: Compute and format the simulation result
+      summary: Retrieve a simulation result
       parameters:
         - in: path
           name: id
@@ -680,7 +697,7 @@ paths:
     get:
       tags:
         - train_schedule
-      summary: Compute and format the simulation result of multiple train schedule
+      summary: Retrieve the simulation result of multiple train schedules
       parameters:
         - in: query
           name: path
@@ -802,6 +819,87 @@ paths:
                         example: No path could be found
         400:
           description: The request body is invalid
+  /electrical_profile_set/:
+    get:
+      tags:
+        - electrical_profiles
+      summary: Retrieve the list of ids and names of electrical profile sets available
+      responses:
+        200:
+          description: Simulation result
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+  /electrical_profile_set/{id}/:
+    get:
+      tags:
+        - electrical_profiles
+      summary: Retrieve the set of electrical profiles with the given id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: Electrical profile set ID
+          required: true
+      responses:
+        200:
+          description: Simulation result
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    value:
+                      type: string
+                    power_class:
+                      type: string
+                    track_ranges:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          track:
+                            type: string
+                          begin:
+                            type: number
+                            format: float
+                          end:
+                            type: number
+                            format: float
+  /electrical_profile_set/level_order/{id}/:
+    get:
+      tags:
+        - electrical_profiles
+      summary: Retrieve the order of strength of the electrical profiles in the set with the given id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          description: Electrical profile set ID
+          required: true
+      responses:
+        200:
+          description: Simulation result
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: 
+                  type: array
+                  items:
+                    type: string
 components:
   schemas:
     Infra:
@@ -949,8 +1047,7 @@ components:
                 items: { type: number, format: float }
                 minItems: 2
                 maxItems: 2
-        mechanical_energy_consumed:
-          type: { type: number, format: float }
+        mechanical_energy_consumed: { type: number, format: float }
     TrainScheduleResult:
       properties:
         id:
